<resources>

    <string name="app_name">Just Pay Phone</string>
	<string name="check_in">Clock In</string>
	<string name="clock_out">Clock Out</string>
	<string name="at_work_x">at work:\n%1$s</string>
	<string name="just_pay_phone_logo">JUST\nPAY\nPHONE</string>
	<string name="where_i_work">Where I Work</string>
	<string name="my_attorney">My Lawyer</string>
	<string name="x_location">Location: %1$f, %2$f</string>
	<plurals name="x_days_worked">
	    <item quantity="one">%1$d day worked here.</item>
	    <item quantity="other">%1$d days worked here.</item>
	</plurals>
	<string name="ph">ph. </string>
	<string name="fax">fax. </string>
	<string name="call_my_lawyer">Call my lawyer</string>
	<string name="write_a_message_to">Write a message to my lawyer</string>
	<string name="record_a_message_for">Record a message for my lawyer</string>
	<string name="did_you_stop_working">Did you stop working to eat lunch?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="how_many_minutes_did">How many minutes did you stop working to eat lunch?</string>
	<string name="go">Go!</string>
	<string name="x_minutes">%1$d minutes</string>
	<string name="x_hours">%1$d hours</string>
	<string name="ok">OK</string>
	<string name="other_amount">Other amount\u2026</string>
	<string name="change">(change?)</string>
	<string name="my_gallery">My Gallery</string>
	<string name="glsp">Georgia Legal Services Program</string>
	<string name="previous_day">Previous Day</string>
	<string name="next_day">Next Day</string>
	<string name="view_my_work_summary">View my Work Summary</string>
	<string name="start_time">Start time</string>
	<string name="end_time">End time</string>
	<string name="time_for_lunch">Time for lunch</string>
	<string name="total_work_time">Total work time</string>
	<string name="weekly_total">Weekly total</string>
	<string name="we_could_not_log">We could not log you in.  Please try again.</string>
	<string name="camera">Camera</string>
	<string name="camcorder">Camcorder</string>
	
	<string name="about">About</string>
	
	<string name="preferences">Preferences</string>
    <string name="prefs_language_title">Language</string>
    <string name="pref_languages_default">System Default</string>
    <string name="pref_languages_en_us">English (US)</string>
    <string name="pref_languages_es">Spanish</string>
    
    <string name="you_cannot_take_a">You cannot take a picture.  You\'re not at work!</string>
</resources>