<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal"
        android:weightSum="1" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:scaleType="centerInside"
            android:src="@drawable/jpp_meal_icon" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/did_you_stop_working" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lunch_taken_choice_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/lunch_taken_yes"
            style="@style/jpp_button_b"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/yes" />

        <Button
            android:id="@+id/lunch_taken_no"
            style="@style/jpp_button_b"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/no" />
    </LinearLayout>

    <RadioGroup
        android:visibility="gone"
        android:id="@+id/lunch_taken_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:orientation="horizontal"
        android:weightSum="1" >

        <RadioButton
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <RadioButton
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:scaleType="centerInside"
            android:src="@drawable/jpp_clock_icon" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/how_many_minutes_did" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lunch_minutes_choice_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            style="@style/jpp_button_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_minutes" />

        <Button
            style="@style/jpp_button_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_minutes" />

        <Button
            style="@style/jpp_button_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_minutes" />

        <Button
            style="@style/jpp_button_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_amount" />
    </LinearLayout>

    <EditText
        android:visibility="gone"
        android:id="@+id/lunch_minutes_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:editable="false" />

    <Button
        android:id="@+id/odk_commit"
        style="@style/jpp_button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/ok" />

</LinearLayout>